--- a/src/app/pages/listening/listening.component.html
+++ b/src/app/pages/listening/listening.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="vm$ | async as vm">
   <nz-tabset [nzAnimated]="false"
-             [nzSelectedIndex]="tabIndex"
+             [nzSelectedIndex]="tabIndex$ | async"
              (nzSelectedIndexChange)="onSelectTab($event)">
     <nz-tab [nzTitle]="'HSK 1' | translate">
       <ng-template nz-tab>
