--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -1,23 +1,31 @@
-<nz-drawer
-  [nzVisible]="isVisibleForm$ | async"
-  nzWidth="calc(37.5vw + 192px)"
-  [nzTitle]="(isCreate$ | async) ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate)"
-  (nzOnClose)="onClose()"
->
-  <ng-container *nzDrawerContent>
-    <form nz-form [formGroup]="dictionaryForm" [nzLayout]="'vertical'">
-      <div nz-row [nzGutter]="16">
-        <div nz-col nzSpan="12">
+<nz-modal [nzVisible]="isVisibleForm$ | async"
+          [nzMaskClosable]="false"
+          [nzStyle]="{ top: 'calc(20vh + 2.5rem)' }"
+          [nzTitle]="(isCreate$ | async) ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate)"
+          [nzOkText]="(isCreate$ | async) ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate)"
+          [nzOkDisabled]="dictionaryForm.invalid || (requestStatus$ | async).isRequesting"
+          (nzOnOk)="onSubmit()"
+          [nzOkLoading]="(requestStatus$ | async).isRequesting"
+          (nzOnCancel)="onClose()">
+  <ng-container *nzModalContent>
+    <form nz-form
+          autocomplete="off"
+          [formGroup]="dictionaryForm"
+          [nzLayout]="'vertical'">
+      <div nz-row
+           [nzGutter]="16">
+        <div nz-col
+             nzSpan="12">
           <nz-form-item>
-            <nz-form-label nzRequired nzFor="display">{{ 'DICTIONARY.DISPLAY' | translate }}</nz-form-label>
+            <nz-form-label nzRequired
+                           nzFor="display">{{ 'DICTIONARY.DISPLAY' | translate }}</nz-form-label>
             <nz-form-control [nzErrorTip]="errorDisplay">
-              <input
-                nz-input
-                placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
-                id="display"
-                formControlName="display"
-              />
-              <ng-template #errorDisplay let-control>
+              <input nz-input
+                     placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                     id="display"
+                     formControlName="display" />
+              <ng-template #errorDisplay
+                           let-control>
                 <ng-container *ngIf="control.touched && control.hasError('required')">
                   {{ 'INPUT.PLACE_HOLDER' | translate }}
                 </ng-container>
@@ -26,17 +34,18 @@
           </nz-form-item>
         </div>
 
-        <div nz-col nzSpan="12">
+        <div nz-col
+             nzSpan="12">
           <nz-form-item>
-            <nz-form-label nzRequired nzFor="pinyin">{{ 'DICTIONARY.PINYIN' | translate }}</nz-form-label>
+            <nz-form-label nzRequired
+                           nzFor="pinyin">{{ 'DICTIONARY.PINYIN' | translate }}</nz-form-label>
             <nz-form-control [nzErrorTip]="errorPinyin">
-              <input
-                nz-input
-                placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
-                id="pinyin"
-                formControlName="pinyin"
-              />
-              <ng-template #errorPinyin let-control>
+              <input nz-input
+                     placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                     id="pinyin"
+                     formControlName="pinyin" />
+              <ng-template #errorPinyin
+                           let-control>
                 <ng-container *ngIf="control.touched && control.hasError('required')">
                   {{ 'INPUT.PLACE_HOLDER' | translate }}
                 </ng-container>
@@ -45,17 +54,17 @@
           </nz-form-item>
         </div>
 
-        <div nz-col nzSpan="12">
+        <div nz-col
+             nzSpan="12">
           <nz-form-item>
             <nz-form-label nzFor="chinaVietnamWord">{{ 'DICTIONARY.CHINA_VIETNAM_WORD' | translate }}</nz-form-label>
             <nz-form-control [nzErrorTip]="errorChinaVietnamWord">
-              <input
-                nz-input
-                placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
-                id="chinaVietnamWord"
-                formControlName="chinaVietnamWord"
-              />
-              <ng-template #errorChinaVietnamWord let-control>
+              <input nz-input
+                     placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                     id="chinaVietnamWord"
+                     formControlName="chinaVietnamWord" />
+              <ng-template #errorChinaVietnamWord
+                           let-control>
                 <ng-container *ngIf="control.touched && control.hasError('required')">
                   {{ 'INPUT.PLACE_HOLDER' | translate }}
                 </ng-container>
@@ -64,21 +73,34 @@
           </nz-form-item>
         </div>
 
-        <div nz-col nzSpan="12">
+        <div nz-col
+             nzSpan="12">
           <nz-form-item>
-            <nz-form-label nzRequired nzFor="hsk">HSK</nz-form-label>
+            <nz-form-label nzRequired
+                           nzFor="hsk">HSK</nz-form-label>
             <nz-form-control [nzErrorTip]="errorHsk">
-              <nz-select [nzPlaceHolder]="'SELECT.PLACE_HOLDER' | translate" formControlName="hsk" required>
-                <nz-option nzValue="hsk1" nzLabel="HSK 1"></nz-option>
-                <nz-option nzValue="hsk2" nzLabel="HSK 2"></nz-option>
-                <nz-option nzValue="hsk3" nzLabel="HSK 3"></nz-option>
-                <nz-option nzValue="hsk4" nzLabel="HSK 4"></nz-option>
-                <nz-option nzValue="hsk5" nzLabel="HSK 5"></nz-option>
-                <nz-option nzValue="hsk6" nzLabel="HSK 6"></nz-option>
-                <nz-option nzValue="hsk79" nzLabel="HSK 7-9"></nz-option>
-                <nz-option nzValue="z---" nzLabel="-------"></nz-option>
+              <nz-select [nzPlaceHolder]="'SELECT.PLACE_HOLDER' | translate"
+                         formControlName="hsk"
+                         required>
+                <nz-option nzValue="hsk1"
+                           nzLabel="HSK 1"></nz-option>
+                <nz-option nzValue="hsk2"
+                           nzLabel="HSK 2"></nz-option>
+                <nz-option nzValue="hsk3"
+                           nzLabel="HSK 3"></nz-option>
+                <nz-option nzValue="hsk4"
+                           nzLabel="HSK 4"></nz-option>
+                <nz-option nzValue="hsk5"
+                           nzLabel="HSK 5"></nz-option>
+                <nz-option nzValue="hsk6"
+                           nzLabel="HSK 6"></nz-option>
+                <nz-option nzValue="hsk79"
+                           nzLabel="HSK 7-9"></nz-option>
+                <nz-option nzValue="z---"
+                           nzLabel="-------"></nz-option>
               </nz-select>
-              <ng-template #errorHsk let-control>
+              <ng-template #errorHsk
+                           let-control>
                 <ng-container *ngIf="control.touched && control.hasError('required')">
                   {{ 'SELECT.PLACE_HOLDER' | translate }}
                 </ng-container>
@@ -87,17 +109,18 @@
           </nz-form-item>
         </div>
 
-        <div nz-col nzSpan="24">
+        <div nz-col
+             nzSpan="24">
           <nz-form-item>
-            <nz-form-label nzRequired nzFor="define">{{ 'DICTIONARY.DEFINE' | translate }}</nz-form-label>
+            <nz-form-label nzRequired
+                           nzFor="define">{{ 'DICTIONARY.DEFINE' | translate }}</nz-form-label>
             <nz-form-control [nzErrorTip]="errorDefine">
-              <input
-                nz-input
-                placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
-                id="define"
-                formControlName="define"
-              />
-              <ng-template #errorDefine let-control>
+              <input nz-input
+                     placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                     id="define"
+                     formControlName="define" />
+              <ng-template #errorDefine
+                           let-control>
                 <ng-container *ngIf="control.touched && control.hasError('required')">
                   {{ 'INPUT.PLACE_HOLDER' | translate }}
                 </ng-container>
@@ -107,14 +130,5 @@
         </div>
       </div>
     </form>
-    <button
-      class="create-button"
-      [nzLoading]="(requestStatus$ | async).isRequesting"
-      [disabled]="dictionaryForm.invalid || (requestStatus$ | async).isRequesting"
-      nz-button
-      (click)="onSubmit()"
-    >
-      {{ (isCreate$ | async) ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate) }}
-    </button>
   </ng-container>
-</nz-drawer>
+</nz-modal>
