--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -40,7 +40,7 @@
 
 @media screen and (max-width: $mobile) {
   .main {
-    padding: 0.5rem 1rem;
+    padding: 1rem;
   }
   .copy-right {
     padding: 0 1rem;
