--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.scss
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.scss
@@ -1,29 +1,14 @@
 @import '/src/variables.scss';
 
-.create-button {
-  background: $primary-color;
-  color: $white;
-  border: none;
-  border-radius: 0.5rem;
-  transition: $transition;
+.ant-modal-header,
+.ant-modal-body,
+.ant-modal-footer {
+  padding: 1rem 1.5rem;
 }
 
-.create-button:hover {
-  background: $primary-color;
-  color: $white;
-  opacity: 0.8;
-}
-
-.cancel-button {
-  background: rgba($color: $black, $alpha: 0.25);
-  color: $white;
-  border: none;
-  border-radius: 0.5rem;
-  transition: $transition;
-}
-
-.cancel-button:hover {
-  background: rgba($color: $black, $alpha: 0.25);
-  color: $white;
-  opacity: 0.8;
+@media (max-width: 767px) {
+  .ant-modal {
+    max-width: calc(100vw - 2rem);
+    margin: 0 auto;
+  }
 }
