--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -1,8 +1,8 @@
 <li class="word">
   <ng-content select="[slot=index]"></ng-content>
-  <span *ngIf="word.updatedDate; else createdDate" class="word--date">
-    {{ 'UPDATED' | translate }}: {{ word.updatedDate | date : 'dd/MM/yyyy' }}</span
-  >
+  <span *ngIf="word.updatedDate; else createdDate"
+        class="word--date">
+    {{ 'UPDATED' | translate }}: {{ word.updatedDate | date : 'dd/MM/yyyy' }}</span>
   <ng-template #createdDate>
     <span class="word--date"> {{ 'CREATED' | translate }}: {{ word.createdDate | date : 'dd/MM/yyyy' }}</span>
   </ng-template>
@@ -39,14 +39,14 @@
   </span>
   <span class="word--define">{{ word.define | translate }}</span>
 
-  <div class="actions">
-    <!-- <span nz-tooltip
+  <!-- <div class="actions">
+    <span nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
           nz-icon
           nzType="edit"
           nzTheme="fill"
-          (click)="onEdit(word._id)"></span> -->
-    <!-- <span nz-tooltip
+          (click)="onEdit(word._id)"></span>
+    <span nz-tooltip
           [nzTooltipTitle]="'ACTION.DELETE' | translate"
           nz-popconfirm
           [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate: { word: word.display + '[' + word.pinyin + ']' }"
@@ -57,6 +57,6 @@
           class="delete-button"
           nz-icon
           nzType="delete"
-          nzTheme="fill"></span> -->
-  </div>
+          nzTheme="fill"></span>
+  </div> -->
 </li>
