--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -40,9 +40,9 @@
 
 @media screen and (max-width: $mobile) {
   .main {
-    padding: 1rem;
+    padding: 1rem 0.5rem;
   }
   .copy-right {
-    padding: 0 1rem;
+    padding: 0 0.5rem;
   }
 }
