--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -39,14 +39,17 @@
   </span>
   <span class="word--define">{{ word.define | translate }}</span>
 
-  <!-- <div class="actions">
-    <span nz-tooltip
+  <div class="actions">
+    <span *ngIf="editable"
+          nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
+          class="edit-button"
           nz-icon
           nzType="edit"
           nzTheme="fill"
           (click)="onEdit(word._id)"></span>
-    <span nz-tooltip
+    <span *ngIf="deletable"
+          nz-tooltip
           [nzTooltipTitle]="'ACTION.DELETE' | translate"
           nz-popconfirm
           [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate: { word: word.display + '[' + word.pinyin + ']' }"
@@ -58,5 +61,5 @@
           nz-icon
           nzType="delete"
           nzTheme="fill"></span>
-  </div> -->
+  </div>
 </li>
