--- a/src/app/pages/dictionary/dictionary.component.html
+++ b/src/app/pages/dictionary/dictionary.component.html
@@ -3,6 +3,7 @@
     <button [nzLoading]="vm.isLoading"
             [disabled]="vm.isLoading"
             nz-button
+            nzType="primary"
             class="create-button"
             (click)="onCreate()">
       <span nz-icon
