--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -42,31 +42,22 @@
   font-size: 2rem;
 }
 
-@media screen and (max-width: $tablet) {
+@media only screen and (max-width: $tablet) {
   ::ng-deep {
     .ant-tooltip {
       display: none;
     }
   }
   .top {
-    padding: 0 calc(1 * 100vw / 12);
+    padding: 0 1rem;
   }
   .main {
-    padding: 1rem calc(1 * 100vw / 12);
+    padding: 1rem;
   }
   .copy-right {
-    padding: 0 calc(1 * 100vw / 12);
+    padding: 0 1rem;
   }
 }
 
-@media screen and (max-width: $mobile) {
-  .top {
-    padding: 0 0.5rem;
-  }
-  .main {
-    padding: 1rem 0.5rem;
-  }
-  .copy-right {
-    padding: 0 0.5rem;
-  }
+@media only screen and (max-width: $mobile) {
 }
