--- a/src/app/pages/dictionary/dictionary.component.scss
+++ b/src/app/pages/dictionary/dictionary.component.scss
@@ -19,6 +19,12 @@
     border-radius: 0.5rem;
     transition: $transition;
   }
+  .create-button:hover {
+    opacity: 0.8;
+  }
+  .create-button:focus {
+    background: $primary-color;
+  }
   .search-input {
     margin-left: 0.5rem;
     width: calc(25% + 2rem);
