--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -128,8 +128,7 @@
     </form>
   </ng-container>
   <ng-container *nzModalFooter>
-    <label *ngIf="(isCreate$ | async)"
-           style="margin-right: auto;"
+    <label style="margin-right: auto;"
            nz-checkbox
            [(ngModel)]="shouldStay">
       {{ 'SHOULD_STAY' | translate: { action: (isCreate$ | async)
@@ -142,7 +141,7 @@
     <button nz-button
             nzType="primary"
             (click)="onSubmit()"
-            [disabled]="((isCreate$ | async) ? dictionaryForm.invalid : !dictionaryForm.dirty) || (requestStatus$ | async).isSubmitting"
+            [disabled]="((isCreate$ | async) ? dictionaryForm.invalid : !canEdit) || (requestStatus$ | async).isSubmitting"
             [nzLoading]="(requestStatus$ | async).isSubmitting">
       {{ (isCreate$ | async) ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate) }}
     </button>
