--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -60,4 +60,13 @@
 }
 
 @media only screen and (max-width: $mobile) {
+  .top {
+    padding: 0 0.5rem;
+  }
+  .main {
+    padding: 0.5rem;
+  }
+  .copy-right {
+    padding: 0 0.5rem;
+  }
 }
